--- a/Testing/Qactive.Tests/Qactive.Tests.csproj
+++ b/Testing/Qactive.Tests/Qactive.Tests.csproj
@@ -89,6 +89,7 @@
     <Compile Include="DuplexSubject.cs" />
     <Compile Include="Extensions\ObservableExtensions.cs" />
     <Compile Include="NonSerializableObject.cs" />
+    <Compile Include="Operators\CustomTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Operators\GroupJoinTests.cs" />
     <Compile Include="Operators\JoinTests.cs" />
@@ -98,6 +99,7 @@
     <Compile Include="Queries\NestedQueryTests.cs" />
     <Compile Include="Operators\SelectTests.cs" />
     <Compile Include="Operators\WhereTests.cs" />
+    <Compile Include="Tcp\Operators\CustomTests.cs" />
     <Compile Include="Tcp\Operators\GroupJoinTests.cs" />
     <Compile Include="Tcp\Operators\JoinTests.cs" />
     <Compile Include="Tcp\Operators\SelectTests.cs" />
