- Fixed a regression bug in the chat example caused by a new feature that enables duplex sequences in more scenarios. - ContextualExpressionVisitor scopes the expected type while visiting.

--- a/Source/Qactive-Net45-Win8-Phone81/Qactive-Net45-Win8-Phone81.csproj
+++ b/Source/Qactive-Net45-Win8-Phone81/Qactive-Net45-Win8-Phone81.csproj
@@ -148,6 +148,9 @@
     <Compile Include="..\Qactive\CompilerGenerated.cs">
       <Link>CompilerGenerated.cs</Link>
     </Compile>
+    <Compile Include="..\Qactive\ContextualExpressionVisitor.cs">
+      <Link>ContextualExpressionVisitor.cs</Link>
+    </Compile>
     <Compile Include="..\Qactive\DuplexCallback.cs">
       <Link>DuplexCallback.cs</Link>
     </Compile>
