--- a/Testing/Qactive.Tests-Net45/Qactive.Tests-Net45.csproj
+++ b/Testing/Qactive.Tests-Net45/Qactive.Tests-Net45.csproj
@@ -81,6 +81,12 @@
     <Compile Include="..\..\Build\Properties\AssemblyInfoShared.cs">
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
+    <Compile Include="..\Qactive.Tests\Any - Exceptions.cs">
+      <Link>Any - Exceptions.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Tests\Any - Expressions.cs">
+      <Link>Any - Expressions.cs</Link>
+    </Compile>
     <Compile Include="..\Qactive.Tests\Any.cs">
       <Link>Any.cs</Link>
     </Compile>
@@ -126,6 +132,9 @@
     <Compile Include="..\Qactive.Tests\Queries\NestedQueryTests.cs">
       <Link>Queries\NestedQueryTests.cs</Link>
     </Compile>
+    <Compile Include="..\qactive.tests\serviceoptions\VisitorTests.cs">
+      <Link>ServiceOptions\VisitorTests.cs</Link>
+    </Compile>
     <Compile Include="..\Qactive.Tests\Tcp\Operators\CustomTests.cs">
       <Link>Tcp\Operators\CustomTests.cs</Link>
     </Compile>
@@ -161,6 +170,15 @@
     </Compile>
     <Compile Include="..\Qactive.Tests\TestDuplexMessage.cs">
       <Link>TestDuplexMessage.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Tests\TestEqualityExpressionVisitor.cs">
+      <Link>TestEqualityExpressionVisitor.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Tests\TestExpressionEqualityComparer.cs">
+      <Link>TestExpressionEqualityComparer.cs</Link>
+    </Compile>
+    <Compile Include="..\Qactive.Tests\TestExpressionVisitor.cs">
+      <Link>TestExpressionVisitor.cs</Link>
     </Compile>
     <Compile Include="..\Qactive.Tests\TestMessage.cs">
       <Link>TestMessage.cs</Link>
