--- a/Testing/Qactive.Tests-Net45/Qactive.Tests-Net45.csproj
+++ b/Testing/Qactive.Tests-Net45/Qactive.Tests-Net45.csproj
@@ -159,6 +159,9 @@
     <Compile Include="..\Qactive.Tests\Tcp\Queries\TcpNestedQueryTests.cs">
       <Link>Tcp\Queries\TcpNestedQueryTests.cs</Link>
     </Compile>
+    <Compile Include="..\qactive.tests\tcp\serviceoptions\VisitorTests.cs">
+      <Link>Tcp\ServiceOptions\VisitorTests.cs</Link>
+    </Compile>
     <Compile Include="..\Qactive.Tests\Tcp\TcpTestService.cs">
       <Link>Tcp\TcpTestService.cs</Link>
     </Compile>
