Connectivity tracing implemented - preliminary only, needs revising.

--- a/Source/Qactive-Net40/Qactive-Net40.csproj
+++ b/Source/Qactive-Net40/Qactive-Net40.csproj
@@ -294,6 +294,9 @@
     <Compile Include="..\Qactive\LocalEvaluator.cs">
       <Link>LocalEvaluator.cs</Link>
     </Compile>
+    <Compile Include="..\Qactive\Log - Connectivity.cs">
+      <Link>Log - Connectivity.cs</Link>
+    </Compile>
     <Compile Include="..\Qactive\Log - Expressions.cs">
       <Link>Log - Expressions.cs</Link>
     </Compile>
