--- a/Source/Qactive/Qactive.csproj
+++ b/Source/Qactive/Qactive.csproj
@@ -175,6 +175,7 @@
     <Compile Include="IDuplexProtocolMessage.cs" />
     <Compile Include="IEnumerableDuplexCallback.cs" />
     <Compile Include="IInvokeDuplexCallback.cs" />
+    <Compile Include="Log - Connectivity.cs" />
     <Compile Include="NamedEnumerator.cs" />
     <Compile Include="NamedDisposable.cs" />
     <Compile Include="IObservableDuplexCallback.cs" />
