--- a/Testing/Qactive.Tests/packages.config
+++ b/Testing/Qactive.Tests/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Ix-Main" version="1.2.5" targetFramework="net461" />
-  <package id="Rx-Core" version="2.2.5" targetFramework="net461" />
-  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net461" />
-  <package id="Rx-Linq" version="2.2.5" targetFramework="net461" />
-  <package id="Rx-Main" version="2.2.5" targetFramework="net461" />
-  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net461" />
-  <package id="Rx-Providers" version="2.2.5" targetFramework="net461" />
-  <package id="Rx-Testing" version="2.2.5" targetFramework="net461" />
+  <package id="Microsoft.Reactive.Testing" version="3.0.0" targetFramework="net461" />
+  <package id="System.Interactive" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive.Providers" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive.Windows.Threading" version="3.0.0" targetFramework="net461" />
 </packages>
