Added Qactive.Providers.WebSockets project with implementation based on the TCP provider. (Currently untested.)

--- a/Source/Qactive.Providers.WebSockets/Qactive.Providers.WebSockets.csproj
+++ b/Source/Qactive.Providers.WebSockets/Qactive.Providers.WebSockets.csproj
@@ -6,16 +6,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{33525618-7ED6-4B4E-A4B7-945BEAA372FF}</ProjectGuid>
+    <ProjectGuid>{72A4C22F-F2FD-4D4B-B34F-3840327819AD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Qactive</RootNamespace>
-    <AssemblyName>Qactive.Providers.Tcp</AssemblyName>
+    <AssemblyName>Qactive.Providers.WebSockets</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <CodeContractsAssemblyMode>1</CodeContractsAssemblyMode>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <CodeContractsAssemblyMode>1</CodeContractsAssemblyMode>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -25,6 +25,7 @@
     <DefineConstants>TRACE;DEBUG;REMOTING;SERIALIZATION;SERIALIZATION_REF;TRACING;TRACING_REF;CAS;CAS_REF;REFLECTION;TPL;ASYNCAWAIT</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>..\..\Build\Properties\CodeAnalysis.ruleset</CodeAnalysisRuleSet>
     <CodeContractsEnableRuntimeChecking>True</CodeContractsEnableRuntimeChecking>
     <CodeContractsRuntimeOnlyPublicSurface>False</CodeContractsRuntimeOnlyPublicSurface>
     <CodeContractsRuntimeThrowOnFailure>True</CodeContractsRuntimeThrowOnFailure>
@@ -68,7 +69,6 @@
     <CodeContractsRuntimeCheckingLevel>Full</CodeContractsRuntimeCheckingLevel>
     <CodeContractsReferenceAssembly>Build</CodeContractsReferenceAssembly>
     <CodeContractsAnalysisWarningLevel>0</CodeContractsAnalysisWarningLevel>
-    <CodeAnalysisRuleSet>..\..\Build\Properties\CodeAnalysis.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -77,8 +77,8 @@
     <DefineConstants>TRACE;REMOTING;SERIALIZATION;SERIALIZATION_REF;TRACING;TRACING_REF;CAS;CAS_REF;REFLECTION;TPL;ASYNCAWAIT</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>..\..\Build\Properties\CodeAnalysis.ruleset</CodeAnalysisRuleSet>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeContractsEnableRuntimeChecking>True</CodeContractsEnableRuntimeChecking>
     <CodeContractsRuntimeOnlyPublicSurface>True</CodeContractsRuntimeOnlyPublicSurface>
     <CodeContractsRuntimeThrowOnFailure>True</CodeContractsRuntimeThrowOnFailure>
@@ -152,7 +152,6 @@
       <HintPath>..\..\packages\System.Reactive.Windows.Threading.3.0.0\lib\net45\System.Reactive.Windows.Threading.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -165,19 +164,19 @@
     <Compile Include="..\..\Build\Properties\AssemblyInfoShared.cs">
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
-    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="IWebSocketQactiveProviderTransportInitializer.cs" />
     <Compile Include="Nop.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TcpClientTermination.cs" />
-    <Compile Include="TcpQactiveDefaults.cs" />
-    <Compile Include="TcpQactiveProviderFactory.cs" />
-    <Compile Include="TcpQactiveProviderFactory{TTransportInitializer}.cs" />
-    <Compile Include="ITcpQactiveProviderTransportInitializer.cs" />
-    <Compile Include="TcpQbservable.cs" />
-    <Compile Include="TcpQbservableClient.cs" />
-    <Compile Include="TcpQactiveProvider.cs" />
-    <Compile Include="TcpQbservableServer - Secure.cs" />
-    <Compile Include="TcpQbservableServer.cs" />
+    <Compile Include="WebSocketClientTermination.cs" />
+    <Compile Include="WebSocketQactiveDefaults.cs" />
+    <Compile Include="WebSocketQactiveProvider.cs" />
+    <Compile Include="WebSocketQactiveProviderFactory.cs" />
+    <Compile Include="WebSocketQactiveProviderFactory{TTransportInitializer}.cs" />
+    <Compile Include="WebSocketQbservable.cs" />
+    <Compile Include="WebSocketQbservableClient.cs" />
+    <Compile Include="WebSocketQbservableServer - Secure.cs" />
+    <Compile Include="WebSocketQbservableServer.cs" />
+    <Compile Include="WebSocketStream.cs" />
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="..\..\Build\Properties\CodeAnalysisDictionary.xml">
@@ -185,9 +184,7 @@
     </CodeAnalysisDictionary>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Qactive.Providers.Streaming\Qactive.Providers.Streaming.csproj">
